--- a/BaileyLPortfolioWebsite/public/index.html
+++ b/BaileyLPortfolioWebsite/public/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-    <!-- Theme Made By www.w3schools.com - No Copyright -->
     <title>Bailey Luu</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -712,7 +711,7 @@
 <body data-spy="scroll" data-target=".navbar" data-offset="60" style="overflow-x: hidden;">
 
     <!-- Navbar -->
-    <nav class="navbar navbar-default bg-4 navbar-fixed-top" id="home">
+    <nav class="navbar navbar-default bg-4 navbar-fixed-top">
         <div class="container navbar-right">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -723,7 +722,7 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right" style="margin-right:10px">
-                    <li><a class="title" href="#home" style="color: #FFFFFF; font-size:20px;">Home</a></li>
+                    <li><a class="title" href="#" style="color: #FFFFFF; font-size:20px;">Home</a></li>
                     <li><a class="title" href="#about" style="color: #FFFFFF; font-size:20px;">About</a></li>
                     <li><a class="title" href="#education" style="color: #FFFFFF ; font-size:20px;">Education</a></li>
                     <li><a class="title" href="#experience" style="color: #FFFFFF ; font-size:20px;">Experience</a></li>
@@ -1161,8 +1160,10 @@
                 title="Devpost" width="60px"
                 src="./assets/img/devpost.png"></a>
             </li>
-            <li class="socialMedia"><a href="mailto: bailey.luu30@gmail.com"> <img alt="gmail" title="Gmail" width="57px"
+            <li class="socialMedia up"><a href="mailto: bailey.luu30@gmail.com"> <img alt="gmail" title="Gmail" width="57px"
             src="https://image.flaticon.com/icons/png/512/281/281769.png"></a></li>
+            <li class="socialMedia up"><a href="https://drive.google.com/file/d/1pIyNFuZQxDjQrIjLiU-quoEfYkemZiBY/view"> <img alt="gmail" title="Gmail" width="50px"
+            src="./assets/img/resumeIcon.png"></a></li>
         </ul>
         <p>Made with ❤️</p>
     </footer>
