--- a/BaileyLPortfolioWebsite/public/index.html
+++ b/BaileyLPortfolioWebsite/public/index.html
@@ -1162,7 +1162,7 @@
             </li>
             <li class="socialMedia up"><a href="mailto: bailey.luu30@gmail.com"> <img alt="gmail" title="Gmail" width="57px"
             src="https://image.flaticon.com/icons/png/512/281/281769.png"></a></li>
-            <li class="socialMedia up"><a href="https://drive.google.com/file/d/1pIyNFuZQxDjQrIjLiU-quoEfYkemZiBY/view"> <img alt="gmail" title="Gmail" width="50px"
+            <li class="socialMedia up"><a href="https://drive.google.com/file/d/1pIyNFuZQxDjQrIjLiU-quoEfYkemZiBY/view" target="_blank"> <img alt="gmail" title="Gmail" width="50px"
             src="./assets/img/resumeIcon.png"></a></li>
         </ul>
         <p>Made with ❤️</p>
